Trabajo práctico - 5° etapa

--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
   --color-fondo-principal: #0D1B2A;
   --color-fondo-secundario: #172A3A;
   --color-texto-principal: #E0E0E0;
-  --color-texto-secundario: #A0A0A0;
+  --color-texto-secundario: #b5b4b4;
   --color-primario: #1A3A5A;
   --color-primario-hover: #2C5D87;
   --color-acento: #3498DB;
